--- a/src/pages/verv/imageCarousel.css
+++ b/src/pages/verv/imageCarousel.css
@@ -5,8 +5,8 @@
 }
 
 .slider {
-    height: 329px; 
-    width: 100%;
+    height: 329px;
+    width: 97.5%;
     display: flex;
     align-items: center;
     overflow: hidden;
@@ -40,10 +40,11 @@
     align-items: flex-end;
     padding: 15px;
     border-radius: 10px;
+    transition: transform 1s;
 }
 
 .slide:hover {
-    transition: transform 1s;
+    /* transition: transform 1s; */
     transform: scale(1.05);
 }
 
