--- a/src/pages/verv/Verv.css
+++ b/src/pages/verv/Verv.css
@@ -46,15 +46,34 @@
 /* apply section */
 .apply-section {
     margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .apply-title {
-    margin-left: 2rem;
-    margin-right: 2rem;
+    align-self: flex-start;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 .apply-body {
-    margin-left: 2rem;
-    margin-right: 2rem;
+    align-self: flex-start;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 2rem;
+}
+
+.apply-action {
+    align-self: center;
+    display: grid;
+    background-color: #fd8732;
+    border-radius: 10px;
+    place-items: center;
+    width: 200px;
+    color: white;
+    font-weight: 500;
+    height: 50px;
+    font-size: larger;
 }
 
 @media only screen and (min-width: 800px) {
