--- a/src/components/logchamp/LogChamp.css
+++ b/src/components/logchamp/LogChamp.css
@@ -15,6 +15,10 @@
     color: var(--c-font-main);
 }
 
+.logchamp__discord {
+    color: rgb(5, 186, 0);
+}
+
 .logchamp p:last-child {
     margin-top: 1rem;
     font-size: .9rem; /* some idiot's discord tag was too long */
