--- a/src/components/themetoggle/ThemeToggle.css
+++ b/src/components/themetoggle/ThemeToggle.css
@@ -21,6 +21,13 @@
     fill: var(--c-sun);
 }
 
+.light .info-title,
+.dark .info-title, 
+.light .info-description,
+.dark .info-description {
+    color: white; 
+}
+
 .theme-toggle__sun-ray {
     transition: .4s;
 }
