--- a/src/assets/fonts/logfont/style.css
+++ b/src/assets/fonts/logfont/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'logfont';
-  src:  url('fonts/logfont.eot?6jm26i');
-  src:  url('fonts/logfont.eot?6jm26i#iefix') format('embedded-opentype'),
-    url('fonts/logfont.ttf?6jm26i') format('truetype'),
-    url('fonts/logfont.woff?6jm26i') format('woff'),
-    url('fonts/logfont.svg?6jm26i#logfont') format('svg');
+  src:  url('fonts/logfont.eot?c6xgtw');
+  src:  url('fonts/logfont.eot?c6xgtw#iefix') format('embedded-opentype'),
+    url('fonts/logfont.ttf?c6xgtw') format('truetype'),
+    url('fonts/logfont.woff?c6xgtw') format('woff'),
+    url('fonts/logfont.svg?c6xgtw#logfont') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -13,6 +13,7 @@
 [class^="logfont-"], [class*=" logfont-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'logfont' !important;
+  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -24,11 +25,17 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.logfont-circle:before {
+.logfont-wikijs:before {
   content: "\e900";
 }
-.logfont-rect:before {
+.logfont-chevron-right:before {
   content: "\e901";
+}
+.logfont-circle:before {
+  content: "\e902";
+}
+.logfont-rect:before {
+  content: "\e903";
 }
 .logfont-login:before {
   content: "\e910";
@@ -82,10 +89,10 @@
   content: "\e951";
 }
 .logfont-satkom:before {
-  content: "\e903";
+  content: "\e904";
 }
 .logfont-satkom-corners:before {
-  content: "\e904";
+  content: "\e907";
 }
 .logfont-huset:before {
   content: "\e94a";
@@ -114,9 +121,6 @@
 .logfont-peppes:before {
   content: "\e913";
 }
-.logfont-pizza:before {
-  content: "\e957";
-}
 .logfont-pizzabakeren:before {
   content: "\e90c";
 }
@@ -136,18 +140,18 @@
   content: "\e926";
 }
 .logfont-facebook:before {
-  content: "\e902";
+  content: "\e908";
 }
 .logfont-linkedin:before {
   content: "\e92a";
 }
 .logfont-gitlab:before {
-  content: "\e907";
+  content: "\e909";
 }
 .logfont-discord:before {
-  content: "\e908";
+  content: "\e90b";
 }
-.logfont-wikijs:before {
+.logfont-redmine:before {
   content: "\e911";
 }
 .logfont-twitter:before {
@@ -166,7 +170,7 @@
   content: "\e923";
 }
 .logfont-1password:before {
-  content: "\e90b";
+  content: "\e915";
 }
 .logfont-twitch:before {
   content: "\ea9f";
@@ -208,7 +212,7 @@
   content: "\eac0";
 }
 .logfont-android1:before {
-  content: "\e915";
+  content: "\e916";
 }
 .logfont-apple:before {
   content: "\e95b";
@@ -232,7 +236,7 @@
   content: "\e93f";
 }
 .logfont-archlinux:before {
-  content: "\e916";
+  content: "\e919";
 }
 .logfont-debian:before {
   content: "\e91b";
@@ -244,13 +248,13 @@
   content: "\e921";
 }
 .logfont-codepen:before {
-  content: "\e909";
+  content: "\e91a";
 }
 .logfont-html5:before {
   content: "\e925";
 }
 .logfont-css3:before {
-  content: "\e91a";
+  content: "\e91c";
 }
 .logfont-javascript:before {
   content: "\e928";
@@ -262,7 +266,7 @@
   content: "\e924";
 }
 .logfont-cpp:before {
-  content: "\e919";
+  content: "\e91e";
 }
 .logfont-java:before {
   content: "\e927";
@@ -274,13 +278,13 @@
   content: "\e936";
 }
 .logfont-digitalocean:before {
-  content: "\e91c";
+  content: "\e922";
 }
 .logfont-docker:before {
-  content: "\e91e";
+  content: "\e929";
 }
 .logfont-kubernetes:before {
-  content: "\e929";
+  content: "\e92f";
 }
 .logfont-node-dot-js:before {
   content: "\e931";
@@ -292,7 +296,7 @@
   content: "\e933";
 }
 .logfont-mysql:before {
-  content: "\e92f";
+  content: "\e934";
 }
 .logfont-webpack:before {
   content: "\e945";
@@ -301,10 +305,10 @@
   content: "\e93c";
 }
 .logfont-postman:before {
-  content: "\e934";
+  content: "\e935";
 }
 .logfont-powershell:before {
-  content: "\e935";
+  content: "\e937";
 }
 .logfont-vim:before {
   content: "\e942";
@@ -319,7 +323,7 @@
   content: "\e95c";
 }
 .logfont-raspberrypi:before {
-  content: "\e937";
+  content: "\e958";
 }
 .logfont-git-text:before {
   content: "\f1d3";
@@ -328,7 +332,7 @@
   content: "\f1d2";
 }
 .logfont-git:before {
-  content: "\e922";
+  content: "\e959";
 }
 .logfont-dropbox:before {
   content: "\eaae";
