--- a/src/components/accordion/Accordion.css
+++ b/src/components/accordion/Accordion.css
@@ -18,12 +18,14 @@
 }
 
 .accordion__icon--left {
-    font-size: 2.2rem;
+    font-size: 1.2rem;
+    line-height: 2.25rem;
     position: absolute;
-    margin-left: -2.7rem;
+    margin-left: -2.3rem;
     transition: .3s;
     color: var(--c-link);
 }
+
 
 .accordion__nav-item--active .accordion__icon--left {
     transform: rotate(90deg);
