--- a/src/assets/fonts/logfont/style.css
+++ b/src/assets/fonts/logfont/style.css
@@ -13,6 +13,7 @@
 [class^="logfont-"], [class*=" logfont-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'logfont' !important;
+  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -150,7 +151,7 @@
 .logfont-discord:before {
   content: "\e90b";
 }
-.logfont-wikijs:before {
+.logfont-redmine:before {
   content: "\e911";
 }
 .logfont-twitter:before {
