--- a/src/pages/eventlist/EventListItem.css
+++ b/src/pages/eventlist/EventListItem.css
@@ -6,16 +6,19 @@
 	padding: .5rem 1rem;
 
 	/* cleaner word-breaking */
-	-webkit-hyphens: auto;
-    -moz-hyphens: auto;
-    -ms-hyphens: auto;
-    hyphens: auto;
+	word-break: break-word;
+	white-space: pre-line;
 	overflow-wrap: break-word;
+	-ms-word-break: break-word;
+	word-break: break-word;
+	-ms-hyphens: auto;
+	-moz-hyphens: auto;
+	-webkit-hyphens: auto;
+	hyphens: auto;
 }
 
 .events-item:hover {
 	background-color: var(--c-bg-box);
-	box-shadow: var(--shadow-box);
 }
 
 .events-item__middle {
@@ -28,38 +31,25 @@
 .events-item__name {
 	font-weight: 400;
 	margin: 0;
-	font-size: 1.3rem;
-	line-height: 1.6rem;
+	font-size: 1.2rem;
+	line-height: 1.4em;
 }
 
 .events-item__details {
 	list-style: none;
-	font-size: 1rem;
-	line-height: 1.2rem;
-	padding-top: .2rem;
+	line-height: 1.4em;
+	margin-top: .2rem;
 }
 
 .events-item__detail {
 	display: inline-block;
 	color: var(--c-font-discret);
-}
-
-.events-item__detail:after {
-	content: '|';
-	height: 1.2rem;
-	display: inline-block;
-	position: relative;
-	padding: 0 .5rem;
-	color: var(--c-font-discret);
-}
-
-.events-item__detail:last-child:after {
-	content: none;
+	margin-right: .4rem;
 }
 
 .events-item__icon {
 	color: var(--c-font-discret);
-	padding-right: .4rem;
+	padding-right: .3rem;
 	line-height: inherit;
 	font-size: 1.3em;
 	vertical-align: top;
@@ -105,6 +95,9 @@
 
 	.events-item__name {
 		font-size: 1.5rem;
-		line-height: 2rem;
+	}
+
+	.events-item__detail {
+		margin-right: 1rem;
 	}
 }
