--- a/src/pages/jobadlist/JobadsListItem.css
+++ b/src/pages/jobadlist/JobadsListItem.css
@@ -36,7 +36,6 @@
 	display: block;
     width: 100%;
 	aspect-ratio: 3/2;
-    object-fit: cover;
 	border-radius: .2rem;
 }
 
@@ -103,7 +102,7 @@
 
 	.jobads-item {
 		column-gap: 1rem;
-		max-width: max-content;
+		max-width: 100%;
 		margin: 0;
 	}
 
