--- a/src/description.css
+++ b/src/description.css
@@ -1,61 +1,70 @@
-.jobad-description {
+.description {
     padding: 1rem;
     position: relative;
     height: 100%;
+
+    /* cleaner word-breaking */
+	word-break: break-word;
+	white-space: pre-line;
+	overflow-wrap: break-word;
+	-ms-word-break: break-word;
+	word-break: break-word;
+	-ms-hyphens: auto;
+	-moz-hyphens: auto;
+	-webkit-hyphens: auto;
+	hyphens: auto;
 }
 
-.jobad-description__h1 {
-    margin-top: 1rem;
-    margin-bottom: 0;
-    font-size: 1.2rem;
+.description__header {
+    font-size: 1.6rem;
+    line-height: 1.4rem;
     font-weight: 400;
-    line-height: 1.4em;
 }
 
-.jobad-description__published {
+.description__published {
     font-size: .9rem;
     color: var(--c-font-discret) !important;
     padding: 0 !important;
 }
 
-.jobad-description h2 {
+.description h2 {
     font-weight: 400;
     font-size: 1.2rem;
     margin: 1rem 0;
 }
 
-.jobad-description h3 {
+.description h3 {
     font-weight: 400;
     font-size: 1.4rem;
     margin: 3rem 0 1rem 0;
 }
 
-.jobad-description h4 {
+.description h4 {
     font-weight: 600;
     margin: 2rem 0 1rem 0;
     font-size: 1.2rem;
 }
 
-.jobad-description p {
+.description p {
     padding: 1rem 0;
     line-height: 1.8rem;
     color: var(--c-font-regular);
     max-width: 40rem;
 }
 
-.jobad-description ul, .jobad-description ol {
+.description ul, .description ol {
     margin: 1rem;
 }
 
-.jobad-description ul {
+.description ul {
     list-style: none;
 }
 
-.jobad-description li {
+.description li {
     color: var(--c-font-regular);
 }
 
-.jobad-description ul li:before {
+.description ul li:before {
     content: '\2022';
     color: var(--c-primary);
     font-weight: bold;
@@ -64,25 +73,25 @@
     margin-left: -.5em;
 }
 
-.jobad-description a:hover {
+.description a:hover {
     text-decoration: underline;
 }
 
 /* For mobile: */
 @media only screen and (min-width: 400px) {
-    .jobad-description h1 {
+    .description h1 {
         font-size: 1.8rem;
     }
 
-    .jobad-description h2 {
+    .description h2 {
         font-size: 1.5rem;
     }  
 
-    .jobad-description h3 {
+    .description h3 {
         font-size: 1.2rem;
     }
 
-    .jobad-description h4 {
+    .description h4 {
         font-size: 1rem;
     }
 }
@@ -91,13 +100,13 @@
 /* For tablets */
 @media only screen and (min-width: 800px) {
 
-    .jobad-description {
+    .description {
         padding: 0;
         padding-right: 2.5rem;
         padding-bottom: 2rem;
     }
     
-    .jobad-description:after {
+    .description:after {
         content: '';
         width: 2rem;
         height: 2rem;
@@ -110,7 +119,7 @@
         transition: .1s;
     }
 
-    .jobad-description:before {
+    .description:before {
         content: '';
         width: 2rem;
         height: 2rem;
@@ -123,22 +132,22 @@
         transition: .1s;
     }
 
-    .jobad-description h1 {
+    .description h1 {
       font-size: 2.3rem;
       letter-spacing: .1rem;
     }
   
-    .jobad-description h2 {
+    .description h2 {
       font-size: 2rem;
       letter-spacing: .1rem;
       line-height: 3rem;
     }
   
-    .jobad-description h3 {
+    .description h3 {
       font-size: 1.8rem;
     }
     
-    .jobad-description h4 {
+    .description h4 {
         font-size: 1.5rem;
     }
 }
