--- a/src/components/datetile/DateTile.css
+++ b/src/components/datetile/DateTile.css
@@ -1,6 +1,7 @@
 .date-tile {
-	padding: .5rem;
+	padding: .5rem 0;
 	border-radius: .2rem;
+	height: fit-content;
 }
 
 .date-tile__day {
@@ -23,17 +24,9 @@
 	color: white;
 }
 
-/* creates a "new" sticker in the top left corner */
-.date-tile--new:before {
-	content: 'Ny';
-	line-height: 1.5rem;
-	background: linear-gradient(132deg, rgb(255, 89, 0) 0%, rgb(254, 182, 0) 100%);
-	box-shadow: var(--c-bg-body) 0 0 0 .25rem;
-	display: block;
-	position: absolute;
-	margin-left: -1.3rem;
-	margin-top: -1rem;
-	border-radius: .2rem;
-	padding: 0 .3rem .1rem .3rem;
-	color: white;
+
+@media only screen and (min-width: 400px) {
+	.date-tile {
+		padding: .5rem;
+	}
 }
