--- a/src/pages/jobadlist/JobadsListItem.css
+++ b/src/pages/jobadlist/JobadsListItem.css
@@ -1,10 +1,21 @@
 .jobads-item {
-	width: 100%;
-	max-width: 22rem;
-	margin: auto;
 	cursor: pointer;
 	transition: .2s;
+	padding: .15rem;
+	border-radius: .4rem;
+	margin: 0 .5rem;
+}
+
+.jobads-item:hover {
+	background-color: var(--c-bg-box);
+}
+
+.jobads-item__wrapper {
+	display: inline-flex;
+	width: 100%;
 	padding: 1rem;
+	z-index: 50;
+	border-radius: .3rem;
 	display: grid;
 	grid-template-columns: auto;
 	row-gap: .5rem;
@@ -22,10 +33,18 @@
 	-moz-hyphens: auto;
 	-webkit-hyphens: auto;
 	hyphens: auto;
+	background-color: var(--c-bg-body);
 }
 
-.jobads-item:hover {
+.jobads-item:hover .jobads-item__wrapper {
 	background-color: var(--c-bg-box);
+}
+
+.jobads-item--highlight {
+	/*background: linear-gradient(132deg, rgb(255, 89, 0) 0%, rgb(254, 182, 0) 100%);*/
+	background: linear-gradient(120deg, #ef5908 30%, #f4aa29 100%);
+
+	margin: 1rem .5rem;
 }
 
 .jobads-item__picture {
@@ -35,27 +54,18 @@
 .jobads-item__img {
 	display: block;
     width: 100%;
+	object-fit: contain;
 	aspect-ratio: 3/2;
 	border-radius: .2rem;
 }
 
-/* "new" sticker in the top left corner */
-.jobads-item__new-sticker {
-	background: var(--c-primary); /*linear-gradient(132deg, rgb(255, 89, 0) 0%, rgb(254, 182, 0) 100%);*/
-	box-shadow: var(--c-bg-body) 0 0 0 .4rem;
-	color: white;
-	display: block;
-	position: absolute;
-	margin-left: -.5rem;
-	margin-top: -.5rem;
-	border-radius: 1.5rem;
-	padding: .2em .8em;
-	font-size: 1.2rem;
-	font-weight: 800;
+.jobads-item__tags {
+	display: flex;
+	gap: .5rem;
 }
 
-.jobads-item:hover .jobads-item__new-sticker{ 
-	box-shadow: var(--c-bg-box) 0 0 0 .4rem; 
+.jobads-item__tag {
+	margin-bottom: .3rem;
 }
 
 .jobads-item__info {
@@ -76,14 +86,15 @@
 }
 
 .jobads-item__detail {
-	color: var(--c-font-discret);
+	color: var(--c-font-regular);
 	display: inline-block;
 	margin-right: .4rem;
 	line-height: 1.4em;
+	font-size: .9rem;
 }
 
 .jobads-item__icon {
-	color: var(--c-font-discret);
+	color: var(--c-font-regular);
 	padding-right: .3rem;
 	line-height: inherit;
 	font-size: 1.3em;
@@ -101,12 +112,16 @@
 @media only screen and (min-width: 400px) {
 
 	.jobads-item {
-		column-gap: 1rem;
-		max-width: 100%;
-		margin: 0;
+		margin: 0 1rem;
 	}
 
-	.jobads-item {
+	.jobads-item--highlight {
+		margin: 1rem;
+	}
+
+	.jobads-item__wrapper {
+		column-gap: 1rem;
+		max-width: 100%;
 		grid-template-columns: min-content auto;
 		grid-template-areas: 'pic info';
 	}
@@ -116,20 +131,22 @@
 		width: fit-content;
 	}
 
-	.jobads-item__new-sticker {
-		font-size: 1rem;
+}
+
+@media only screen and (min-width: 600px) {
+	.jobads-item__img {
+		height: 7rem;
 	}
 }
 
 @media only screen and (min-width: 800px) {
 
-	.jobads-item {
-		border-radius: .2rem;
+	.jobads-item__wrapper {
 		padding: 1.5rem 1rem;
 	}
 
 	.jobads-item__img {
-		height: 7rem;
+		height: 8rem;
 	}
 
 	.jobads-item__name {
@@ -141,3 +158,12 @@
 	}
 }
 
+@media only screen and (min-width: 1000px) {
+	.jobads-item {
+		margin: 0;
+	}
+
+	.jobads-item--highlight {
+		margin: 2rem 0;
+	}
+}
