--- a/src/components/svg/committeelogos/BedkomLogoAnimation.css
+++ b/src/components/svg/committeelogos/BedkomLogoAnimation.css
@@ -1,45 +1,45 @@
 @media only screen and (min-width: 800px) {
-    .tabs__nav-title--active .prkom-logo__c1 {
+    .tabs__nav-title--active .bedkom-logo__c1 {
         animation: c1 1.5s ease 1;
     }
 
-    .tabs__nav-title--active .prkom-logo__l1 {
+    .tabs__nav-title--active .bedkom-logo__l1 {
         animation: l1 1.5s ease 1;
     }
 
-    .tabs__nav-title--active .prkom-logo__c2 {
+    .tabs__nav-title--active .bedkom-logo__c2 {
         animation: c2 1.5s ease 1;
     }
 
-    .tabs__nav-title--active .prkom-logo__l2 {
+    .tabs__nav-title--active .bedkom-logo__l2 {
         animation: l2 1.5s ease 1;
     }
 
-    .tabs__nav-title--active .prkom-logo__c3 {
+    .tabs__nav-title--active .bedkom-logo__c3 {
         animation: c3 1.5s ease 1;
     }
 
-    .tabs__nav-title--active .prkom-logo__l3 {
+    .tabs__nav-title--active .bedkom-logo__l3 {
         animation: l3 1.5s ease 1;
     }
 
-    .tabs__nav-title--active .prkom-logo__c4 {
+    .tabs__nav-title--active .bedkom-logo__c4 {
         animation: c4 1.5s ease 1;
     }
 
-    .tabs__nav-title--active .prkom-logo__l4 {
+    .tabs__nav-title--active .bedkom-logo__l4 {
         animation: l4 1.5s ease 1;
     }
 
-    .tabs__nav-title--active .prkom-logo__c5 {
+    .tabs__nav-title--active .bedkom-logo__c5 {
         animation: c5 1.5s ease 1;
     }
 
-    .tabs__nav-title--active .prkom-logo__l5 {
+    .tabs__nav-title--active .bedkom-logo__l5 {
         animation: l5 1.5s ease 1;
     }
 
-    .tabs__nav-title--active .prkom-logo__c6 {
+    .tabs__nav-title--active .bedkom-logo__c6 {
         animation: c6 1.5s ease 1;
     }
 
