--- a/src/pages/verv/imageCarousel.css
+++ b/src/pages/verv/imageCarousel.css
@@ -1,27 +1,21 @@
-.imageCarousel {
+.image-carousel {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 2rem;
 }
 
-.slider {
-    margin-top: 2rem;
-    height: 150px;
-    width: 97.5%;
+.image-carousel__slider {
     display: flex;
     align-items: center;
     overflow: hidden;
-    border-radius: 10px;
 }
 
-.slide-track {
+.image-carousel__slide-track {
     display: flex;
-    width: calc(250px * 30); /* 250px * maxImages*2 , remember to also change for large screens */
-    animation: scroll 120s linear infinite; /* 8 * maxImages */
-    border-radius: 10px;
+    width: calc((16.5rem + 1rem) * 30); /* 250px * maxImages*2 , remember to also change for large screens */
+    animation: scroll 100s linear infinite; /* 8 * maxImages */
 }
 
-.slide-track:hover {
+.image-carousel__slide-track:hover {
     animation-play-state: paused;
 }
 
@@ -30,71 +24,53 @@
         transform: translateX(0);
     }
     100% {
-        transform: translateX(calc(-250px * 15)); /* -250px * maxImages */
+        transform: translateX(calc((-16.5rem - 1rem) * 15)); /* -250px * maxImages */
     }
 }
 
-.slide {
-    height: 100%;
-    width: 250px;
+.image-carousel__slide {
     display: flex;
-    align-items: flex-end;
-    padding: 15px;
-    border-radius: 10px;
+    padding: .5rem;
+    transition: transform .3s;
+}
+
+.image-carousel__slide:hover {
+    transform: scale(1.02);
+}
+
+.image-carousel__img {
     transition: transform 1s;
+    border-radius: .5rem;
+    display: block;
+    width: 16.5rem;
 }
 
-.slide:hover {
-    /* transition: transform 1s; */
-    transform: scale(1.05);
-}
-
-.carouselImage {
-    width: 100%;
-    transition: transform 1s;
-    border-radius: 10px;
-}
-
-.info {
+.image-carousel__info {
+    padding: .5rem;
     position: absolute;
     z-index: 10;
-    background-color: #11111180;
-    align-content:end;
-    justify-content: center;
-    width: 220px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+    align-self: end;
+    width: 16.5rem;
+    border-bottom-left-radius: .5rem;
+    border-bottom-right-radius: .5rem;
+    transition: .5s;
 }
 
-.info-title {
-    margin-left: 5px;
-    font-size: x-small;
+.image-carousel__title {
+    font-size: 1.1rem;
+    color: white;
+    font-weight: 600;
 }
 
-.info-description {
-    margin-left: 5px;
-    font-size: xx-small;
+.image-carousel__description {
+    font-size: .9rem;
+    color: white;
 }
 
-@media screen and (min-width: 800px) {
-    .slider {
-        height: 325px;
-        margin-top: 0;
-    }
-    .slide-track {
-        width: calc(500px * 30);  /* 500px * maxImages*2 , remember to also change for small screens */
-    }
-    .slide {
-        width: 500px;
-    }
-    .info {
-        width: 470px;
-    }
-    .info-title {
-        font-size: larger;
-    }
-    .info-description {
-        font-size: medium;
+@media screen and (min-width: 400px) {
+    .image-carousel__slide-track {
+        width: calc((18rem + 1rem) * 30); /* 250px * maxImages*2 , remember to also change for large screens */
     }
 
     @keyframes scroll {
@@ -102,7 +78,73 @@
             transform: translateX(0);
         }
         100% {
-            transform: translateX(calc(-500px * 15)); /* -500px * maxImages , remember to also change for small screens*/
+            transform: translateX(calc((-18rem - 1rem) * 15)); /* -250px * maxImages */
         }
+    }
+
+    .image-carousel__img {
+        transition: transform 1s;
+        border-radius: .5rem;
+        display: block;
+        width: 18rem;
+    }
+
+    .image-carousel__info {
+        padding: 1rem;
+        width: 18rem;
+    }
+}
+
+@media screen and (min-width: 800px) {
+
+    .image-carousel {
+        border-radius: .5rem;
+        margin-top: 4rem;
+    }
+
+    .image-carousel__slide-track {
+        width: calc((28rem + 2rem) * 30); /* 250px * maxImages*2 , remember to also change for large screens */
+    }
+
+    @keyframes scroll {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(calc((-28rem - 2rem) * 15)); /* -250px * maxImages */
+        }
+    }
+
+    .image-carousel__slide {
+        padding: 1rem;
+    }
+
+    .image-carousel__img {
+        transition: transform 1s;
+        border-radius: .5rem;
+        display: block;
+        width: 28rem;
+    }
+
+    .image-carousel__info {
+        padding: 1rem;
+        width: 28rem;
+    }
+
+    .image-carousel__title {
+        font-size: 1.2rem;
+    }
+    
+    .image-carousel__description {
+        font-size: 1rem;
+    }
+}
+
+
+@media screen and (min-width: 1200px) {
+    .image-carousel {
+        border-radius: .5rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
     }
 }
