--- a/src/pages/eventlist/EventListItem.css
+++ b/src/pages/eventlist/EventListItem.css
@@ -12,9 +12,12 @@
 
 .events-item--highlight {
 	margin: 1rem .5rem;
-	/*background: linear-gradient(132deg, rgb(255, 89, 0) 0%, rgb(254, 182, 0) 100%);*/
-	
-	background: linear-gradient(120deg, #ef5908 30%, #f4aa29 100%);
+	background: var(--c-bg-highlight-gradient);
+	transition: .2s;
+}
+
+.events-item--highlight:hover {
+	background: var(--c-bg-highlight-gradient-hover);
 }
 
 .events-item__wrapper {
