--- a/src/pages/jobadlist/JobadsListItem.css
+++ b/src/pages/jobadlist/JobadsListItem.css
@@ -41,10 +41,13 @@
 }
 
 .jobads-item--highlight {
-	/*background: linear-gradient(132deg, rgb(255, 89, 0) 0%, rgb(254, 182, 0) 100%);*/
-	background: linear-gradient(120deg, #ef5908 30%, #f4aa29 100%);
-
+	background: var(--c-bg-highlight-gradient);
 	margin: 1rem .5rem;
+	transition: .2s;
+}
+
+.jobads-item--highlight:hover {
+	background: var(--c-bg-highlight-gradient-hover);
 }
 
 .jobads-item__picture {
