--- a/src/pages/eventlist/EventListItem.css
+++ b/src/pages/eventlist/EventListItem.css
@@ -3,7 +3,6 @@
 	cursor: pointer;
 	transition: .2s;
 	border-radius: .3rem;
-	margin: 0 .5rem
 }
 
 .events-item:hover .events-item__wrapper {
@@ -11,9 +10,9 @@
 }
 
 .events-item--highlight {
-	margin: 1rem .5rem;
 	background: var(--c-bg-highlight-gradient);
 	transition: .2s;
+	margin-bottom: 1rem;
 }
 
 .events-item--highlight:hover {
@@ -21,12 +20,30 @@
 }
 
 .events-item__wrapper {
-	display: inline-flex;
+	display: grid;
+	grid-template-columns: min-content auto min-content;
 	width: 100%;
 	padding: .5rem;
 	z-index: 50;
 	border-radius: .2rem;
 	background-color: var(--c-bg-body);
+
+}
+
+.events-item__tags {
+	display: flex;
+	gap: .5rem;
+	flex-wrap: wrap;
+}
+
+.events-item__tag {
+	margin-bottom: .2rem;
+}
+
+.events-item__middle {
+	min-width: 10rem;
+	margin: auto 0;
+	padding: 0 0 0 1rem;
 
 	/* cleaner word-breaking */
 	word-break: break-word;
@@ -40,22 +57,6 @@
 	hyphens: auto;
 }
 
-.events-item__tags {
-	display: flex;
-	gap: .5rem;
-}
-
-.events-item__tag {
-	margin-bottom: .2rem;
-}
-
-.events-item__middle {
-	width: 100%;
-	min-width: 10rem;
-	margin: auto 0;
-	padding: 0 0 0 .5rem;
-}
-
 .events-item__name {
 	font-weight: 400;
 	margin: 0;
@@ -65,14 +66,16 @@
 
 .events-item__details {
 	list-style: none;
-	line-height: 1.4em;
 	margin-top: .2rem;
+	display: flex;
+	flex-wrap: wrap;
+	column-gap: .5rem;
+	row-gap: .1rem;
 }
 
 .events-item__detail {
 	display: inline-block;
 	color: var(--c-font-regular);
-	margin-right: .4rem;
 	font-size: .9rem;
 }
 
@@ -104,11 +107,18 @@
 	}
 
 	.events-item__middle {
-		padding: 0 .5rem;
+		padding: 0 1rem;
+	}
+
+	.events-item__details {
+		margin-top: .2rem;
+		column-gap: 1rem;
+		row-gap: .2rem;
 	}
 
 	.events-item__picture {
 		display: block;
+		
 	}
 }
 
@@ -122,17 +132,16 @@
 		font-size: 1.5rem;
 	}
 
-	.events-item__detail {
-		margin-right: 1rem;
+	.events-item__details {
+		margin-top: .2rem;
+		column-gap: 1.2rem;
+		row-gap: .5rem;
 	}
 }
 
 @media only screen and (min-width: 1000px) {
-	.events-item {
-		margin: 0;
-	}
 
 	.events-item--highlight {
-		margin: 1rem 0;
+		margin-bottom: 1rem;
 	}
 }
