--- a/src/pages/jobadlist/JobadsListItem.css
+++ b/src/pages/jobadlist/JobadsListItem.css
@@ -3,7 +3,7 @@
 	transition: .2s;
 	padding: .13rem;
 	border-radius: .4rem;
-	margin: 0 .5rem;
+	margin-bottom: 1rem;
 }
 
 .jobads-item:hover {
@@ -18,10 +18,12 @@
 	border-radius: .3rem;
 	display: grid;
 	grid-template-columns: auto;
-	row-gap: .5rem;
-	grid-template-areas: 
+	row-gap: .3rem;
+	align-items: center;
+	grid-template-areas:
 		'pic' 
 		'info';
+
 
 	/* cleaner word-breaking */
 	word-break: break-word;
@@ -36,13 +38,20 @@
 	background-color: var(--c-bg-body);
 }
 
+.jobads-item__wrapper--with-tags {
+	align-items: start;
+	grid-template-areas:
+		'tags'
+		'pic' 
+		'info';
+}
+
 .jobads-item:hover .jobads-item__wrapper {
 	background-color: var(--c-bg-box);
 }
 
 .jobads-item--highlight {
 	background: var(--c-bg-highlight-gradient);
-	margin: 1rem .5rem;
 	transition: .2s;
 }
 
@@ -65,15 +74,12 @@
 .jobads-item__tags {
 	display: flex;
 	gap: .5rem;
-}
-
-.jobads-item__tag {
-	margin-bottom: .3rem;
+	grid-area: tags;
+	height: min-content;
 }
 
 .jobads-item__info {
 	grid-area: info;
-	align-self: center;
 }
 
 .jobads-item__name {
@@ -84,14 +90,15 @@
 
 .jobads-item__details {
 	list-style: none;
-	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	column-gap: 1rem;
+	row-gap: .2rem;
 	margin-top: .5rem;
 }
 
 .jobads-item__detail {
 	color: var(--c-font-regular);
-	display: inline-block;
-	margin-right: .4rem;
 	line-height: 1.4em;
 	font-size: .9rem;
 }
@@ -114,31 +121,46 @@
 
 @media only screen and (min-width: 400px) {
 
-	.jobads-item {
-		margin: 0 1rem;
-	}
-
 	.jobads-item--highlight {
-		margin: 1rem;
+		margin-bottom: 1rem;
 	}
 
 	.jobads-item__wrapper {
 		column-gap: 1rem;
+		padding: .75rem;
 		max-width: 100%;
 		grid-template-columns: min-content auto;
-		grid-template-areas: 'pic info';
+		grid-template-areas: 
+			'pic info';
+	}
+
+	.jobads-item__wrapper--with-tags {
+		grid-template-rows: 1.6rem auto;
+		grid-template-areas: 
+			'tags tags'
+			'pic info';
 	}
 
 	.jobads-item__img {
-		height: 6rem;
+		height: 4.5rem;
 		width: fit-content;
 	}
 
 }
 
 @media only screen and (min-width: 600px) {
+
+	.jobads-item__wrapper {
+		padding: 1rem;
+	}
+
 	.jobads-item__img {
 		height: 7rem;
+	}
+
+	.jobads-item__details {
+		column-gap: 1.2rem;
+		row-gap: .2rem;
 	}
 }
 
@@ -146,6 +168,16 @@
 
 	.jobads-item__wrapper {
 		padding: 1rem;
+		column-gap: 2rem;
+		row-gap: .5rem;
+		grid-template-areas: 
+			'pic info';
+	}
+
+	.jobads-item__wrapper--with-tags {
+		grid-template-areas: 
+			'pic tags'
+			'pic info';
 	}
 
 	.jobads-item__img {
@@ -156,17 +188,16 @@
 		font-size: 1.5rem;
 	}
 
-	.jobads-item__detail {
-		margin-right: 1rem;
+	.jobads-item__details {
+		column-gap: 1.5rem;
+		row-gap: .5rem;
 	}
 }
 
 @media only screen and (min-width: 1000px) {
-	.jobads-item {
-		margin: 0;
-	}
 
 	.jobads-item--highlight {
-		margin: 2rem 0;
+		margin-bottom: 2rem;
 	}
+
 }
