--- a/src/components/article/Article.css
+++ b/src/components/article/Article.css
@@ -8,12 +8,20 @@
     font-weight: 400;
 }
 
-.article__published {
-    font-size: .9rem;
-    color: var(--c-font-discret) !important;
+.article__dates {
     padding: 0;
     margin: 0 0 1rem 0;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1rem;
 }
+
+.article__date {
+    font-size: .9rem;
+    color: var(--c-font-discret);
+}
+
+
 
 .article__informational {
     display: flex;
