--- a/src/components/filter/filter.css
+++ b/src/components/filter/filter.css
@@ -138,6 +138,8 @@
     .filter-groups__reset {
         min-width: 12rem;
         width: fit-content;
+        margin-right: 0;
+        margin-left: auto;
     }    
 
     .filter__title {
@@ -156,6 +158,11 @@
 }
 
 @media only screen and (min-width: 1000px) {
+
+    .filter-groups__reset {
+        margin-left: 0;
+        margin-right: auto;
+    }
 
     .filter__title {
         font-size: 1.6rem;
