--- a/src/App.css
+++ b/src/App.css
@@ -55,12 +55,16 @@
 
 
   /* buttons */
-  --c-btn: var(--c-grey-33);
-  --c-btn-hover: var(--c-grey-48);
-  /* use on-box if the element is on top
-   of somthing with the bg-box background */
-  --c-btn-on-box: var(--c-grey-48);
-  --c-btn-on-box-hover: var(--c-grey-69);
+  --c-btn-text-primary: var(--c-white);
+  --c-btn-bg-primary: var(--c-primary-dark);
+  --c-btn-bg-hover-primary: var(--c-primary);
+
+  --c-btn-text-discret: var(--c-white);
+  --c-btn-bg-discret: var(--c-grey-48);
+  --c-btn-bg-hover-discret: var(--c-grey-69);
+
+  --c-btn-text-disabled: var(--c-grey-180);
+  --c-btn-bg-disabled: var(--c-grey-48);
   
 
   /* font colors */
@@ -154,10 +158,12 @@
 
 
   /* buttons */
-  --c-btn: var(--c-grey-200);
-  --c-btn-hover: var(--c-grey-180);
-  --c-btn-on-box: var(--c-grey-220);
-  --c-btn-on-box-hover: var(--c-grey-196);
+  --c-btn-text-discret: var(--c-black);
+  --c-btn-bg-discret: var(--c-grey-200);
+  --c-btn-bg-hover-discret: var(--c-grey-180);
+
+  --c-btn-text-disabled: var(--c-grey-69);
+  --c-btn-bg-disabled: var(--c-grey-200);
 
 
   /* decorations */
@@ -248,19 +254,22 @@ footer {
   z-index: 2;
   font-weight: 600;
   font-size: 2rem;
+  line-height: 1.2em;
+  padding: .3em 0;
   color: var(--c-font-title);
 }
 
 .heading-2 {
-  margin: 1rem 0 .5rem 0;
+  margin: 1em 0 .5em 0;
   z-index: 2;
   font-weight: 400;
   font-size: 1.6rem;
+  line-height: 1.2em;
   color: var(--c-font-title);
 }
 
 .heading-3 {
-  margin: 1rem 0;
+  margin: 1em 0;
   font-weight: 400;
   font-size: 1.4rem;
   color: var(--c-font-title);
@@ -268,7 +277,7 @@ footer {
 
 .heading-4 {
   font-weight: 600;
-  margin: 1rem 0 .5rem 0;
+  margin: 1em 0 .5em 0;
   font-size: 1.2rem;
   color: var(--c-font-title);
 }
@@ -326,33 +335,33 @@ a {
 }
 
 .standard-button--primary {
-  background-color: var(--c-primary);
-  color: white;
+  background-color: var(--c-btn-bg-primary);
+  color: var(--c-btn-text-primary);
 }
-
 .standard-button--primary i {
-  color: white;
+  color: var(--c-btn-text-primary);
 }
-
 .standard-button--primary:hover {
-  background-color: var(--c-primary-dark);
+  background-color: var(--c-btn-bg-hover-primary);
 }
 
 .standard-button--discret {
-  background-color: var(--c-btn-on-box);
-  color: white;
+  background-color: var(--c-btn-bg-discret);
+  color: var(--c-btn-text-discret);
 }
-
+.standard-button--discret i {
+  color: var(--c-btn-text-discret);
+}
 .standard-button--discret:hover {
-  background-color: var(--c-btn-on-box-hover);
+  background-color: var(--c-btn-bg-hover-discret);
 }
 
 .standard-button--disabled {
-  background-color: var(--c-btn-on-box);
-  color: var(--c-font-discret);
+  background-color: var(--c-btn-bg-disabled);
+  color: var(--c-btn-text-disabled);
 }
 .standard-button--disabled i {
-  color: var(--c-font-discret);
+  color: var(--c-btn-text-disabled);
 }
 
 
@@ -397,7 +406,7 @@ abbr {
 /* tags */
 
 .tag {
-  font-size: .7rem;
+  font-size: .8rem;
 	border-radius: 1em;
 	display: block;
 	width: fit-content;
@@ -446,11 +455,6 @@ abbr {
   color: var(--c-new-text);
 }
 
-@media only screen and (min-width: 600px) {
-  .tag {
-    font-size: .8rem;
-  }
-}
 @media only screen and (min-width: 800px) {
   .tag {
     font-size: .9rem;
@@ -520,7 +524,7 @@ abbr {
 
   .heading-1 {
     font-size: 3.5rem;
-    padding: 0 1.5rem;
+    padding-left: 1.5rem;
     letter-spacing: .1rem;
   }
 
@@ -535,7 +539,7 @@ abbr {
     border-color: var(--c-corner-decor);
     border-style: solid none none solid;
     margin-left: -1.5rem;
-    margin-top: -.2rem;
+    margin-top: -.8rem;
     z-index: 2;
     transition: .1s;
   }
@@ -550,7 +554,7 @@ abbr {
     border-right: .7rem solid var(--c-corner-decor);
     border-top: .7rem solid var(--c-corner-decor);
     margin-left: -1.5rem;
-    margin-top: -.2rem;
+    margin-top: -.8rem;
     z-index: 2;
     transition: .1s;
   }
@@ -571,7 +575,6 @@ abbr {
     transition: .1s;
   }
 
-  
   /* Decoration corner */
   .heading-1--bottom-left-corner:before {
     z-index: -1;
