--- a/src/components/article/Article.css
+++ b/src/components/article/Article.css
@@ -5,6 +5,8 @@
 
 .article__header  {
     font-size: 1.9rem;
+    line-height: 1.2em;
+    margin: .2em 0;
     font-weight: 400;
 }
 
@@ -46,14 +48,15 @@
 }
 
 .article__main h1, .article__main h2 {
-    margin: 2rem 0 1rem 0;
+    margin: 1em 0 .5em 0;
     font-weight: 400;
     font-size: 1.6rem;
+    line-height: 1.2em;
     color: var(--c-font-title);
 }
 
 .article__main h3 {
-    margin: 2rem 0 1rem 0;
+    margin: 1em 0 .5em 0;
     font-weight: 400;
     font-size: 1.3rem;
     color: var(--c-font-title);
@@ -61,7 +64,7 @@
 
 .article__main h4 {
     font-weight: 600;
-    margin: 2rem 0 1rem 0;
+    margin: 1em 0 .5em 0;
     font-size: 1rem;
     color: var(--c-font-title);
 }
@@ -79,9 +82,6 @@
 
 .article__main ul{
     margin: 1rem;
-}
-
-.article__main ul {
     list-style: none;
 }
 
@@ -150,12 +150,10 @@
 
     .article__header {
       font-size: 2.3rem;
-      letter-spacing: .1rem;
     }
   
     .article__main h1, .article__main h2 {
       font-size: 2rem;
-      letter-spacing: .1rem;
     }
   
     .article__main h3 {
