--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,7 @@
   --c-bright-orange: #fd8738;
   --c-dark-orange: #d95d0a;
   --c-yellow: rgb(255, 225, 1);
-  --c-purple: rgb(94, 73, 230);
-  --c-blue:     rgb(24, 182, 240);
-  --c-blue-dark: rgb(9, 128, 192);
-  --c-red:      rgb(198, 0, 0);
-  --c-dark-red: rgb(128, 0, 0);
-  --c-darker-red: rgb(47, 0, 0);
-  
+  --c-blue: rgb(94, 73, 230);
   --c-black:    rgb(0, 0, 0);
   --c-grey-16:  rgb(16, 16, 16);
   --c-grey-24:  rgb(24, 24, 24);
@@ -49,22 +43,15 @@
   /* hero section */
   --c-bg-welcome: radial-gradient(circle, rgba(10,10,10) 0%, rgba(24,24,24) 100%);
   --c-bg-mobile-nav-open: rgba(20, 20, 20, .8);
-  /* fancy backgrounds */
-  --c-bg-highlight-gradient: linear-gradient(to right, #FF512F 0%, #F09819 51%, #FF512F 100%);
-  --c-bg-highlight-gradient-hover: linear-gradient(to right, #FF512F 0%, #F09819 20%, #FF512F 50%);
 
 
   /* buttons */
-  --c-btn-text-primary: var(--c-white);
-  --c-btn-bg-primary: var(--c-primary-dark);
-  --c-btn-bg-hover-primary: var(--c-primary);
-
-  --c-btn-text-discret: var(--c-white);
-  --c-btn-bg-discret: var(--c-grey-48);
-  --c-btn-bg-hover-discret: var(--c-grey-69);
-
-  --c-btn-text-disabled: var(--c-grey-180);
-  --c-btn-bg-disabled: var(--c-grey-48);
+  --c-btn: var(--c-grey-33);
+  --c-btn-hover: var(--c-grey-48);
+  /* use on-box if the element is on top
+   of somthing with the bg-box background */
+  --c-btn-on-box: var(--c-grey-48);
+  --c-btn-on-box-hover: var(--c-grey-69);
   
 
   /* font colors */
@@ -84,20 +71,11 @@
   
   /* theme toggle */
   --c-sun: var(--c-yellow);
-  --c-moon: var(--c-purple);
+  --c-moon: var(--c-blue);
 
   
   /* signal colors */
   --c-warning: var(--c-primary);
-  --c-new-text: var(--c-blue);
-  --c-new-bg: none;
-  --c-new-border: var(--c-blue);
-  --c-highlight-text: var(--c-primary);
-  --c-highlight-bg: none;
-  --c-highlight-boder: var(--c-primary);
-  --c-error-text: var(--c-red);
-  --c-error-border: var(--c-red);
-  --c-error-bg: var(--c-darker-red);
 
 
   /* font family */
@@ -144,26 +122,12 @@
   /* signal colors */
   --c-warning: var(--c-primary-dark);
 
-  --c-new-text: var(--c-white);
-  --c-new-bg: var(--c-blue-dark);
-  --c-new-border: var(--c-blue-dark);
-
-  --c-highlight-text: var(--c-white);
-  --c-highlight-bg: var(--c-primary-dark);
-  --c-highlight-border: var(--c-primary-dark);
-
-  --c-error-text: var(--c-white);
-  --c-error-border: var(--c-dark-red);
-  --c-error-bg: var(--c-dark-red);
-
 
   /* buttons */
-  --c-btn-text-discret: var(--c-black);
-  --c-btn-bg-discret: var(--c-grey-200);
-  --c-btn-bg-hover-discret: var(--c-grey-180);
-
-  --c-btn-text-disabled: var(--c-grey-69);
-  --c-btn-bg-disabled: var(--c-grey-200);
+  --c-btn: var(--c-grey-200);
+  --c-btn-hover: var(--c-grey-180);
+  --c-btn-on-box: var(--c-grey-220);
+  --c-btn-on-box-hover: var(--c-grey-196);
 
 
   /* decorations */
@@ -186,13 +150,6 @@
   color: var(--c-font-main);
   transition: .2s;
 }
-
-
-/* material icons */
-.material-symbols-sharp {
-  vertical-align: middle;
-}
-
 
 body {
   background-color: var(--c-bg-body);
@@ -254,22 +211,19 @@ footer {
   z-index: 2;
   font-weight: 600;
   font-size: 2rem;
-  line-height: 1.2em;
-  padding: .3em 0;
   color: var(--c-font-title);
 }
 
 .heading-2 {
-  margin: 1em 0 .5em 0;
+  margin: 1rem 0 .5rem 0;
   z-index: 2;
   font-weight: 400;
   font-size: 1.6rem;
-  line-height: 1.2em;
   color: var(--c-font-title);
 }
 
 .heading-3 {
-  margin: 1em 0;
+  margin: 1rem 0;
   font-weight: 400;
   font-size: 1.4rem;
   color: var(--c-font-title);
@@ -277,7 +231,7 @@ footer {
 
 .heading-4 {
   font-weight: 600;
-  margin: 1em 0 .5em 0;
+  margin: 1rem 0 .5rem 0;
   font-size: 1.2rem;
   color: var(--c-font-title);
 }
@@ -335,33 +289,24 @@ a {
 }
 
 .standard-button--primary {
-  background-color: var(--c-btn-bg-primary);
-  color: var(--c-btn-text-primary);
+  background-color: var(--c-primary);
+  color: white;
 }
+
 .standard-button--primary i {
-  color: var(--c-btn-text-primary);
+  color: white;
 }
+
 .standard-button--primary:hover {
-  background-color: var(--c-btn-bg-hover-primary);
+  background-color: var(--c-primary-dark);
 }
 
 .standard-button--discret {
-  background-color: var(--c-btn-bg-discret);
-  color: var(--c-btn-text-discret);
-}
-.standard-button--discret i {
-  color: var(--c-btn-text-discret);
-}
-.standard-button--discret:hover {
-  background-color: var(--c-btn-bg-hover-discret);
+  background-color: var(--c-btn-on-box);
 }
 
-.standard-button--disabled {
-  background-color: var(--c-btn-bg-disabled);
-  color: var(--c-btn-text-disabled);
-}
-.standard-button--disabled i {
-  color: var(--c-btn-text-disabled);
+.standard-button--discret:hover {
+  background-color: var(--c-btn-on-box-hover);
 }
 
 
@@ -403,62 +348,9 @@ abbr {
 }
 
 
-/* tags */
-
-.tag {
-  font-size: .8rem;
-	border-radius: 1em;
-	display: block;
-	width: fit-content;
-  height: fit-content;
-	padding: .08em .6em 0 .6em;
-  font-weight: 500;
-  border: .15em solid;
-  text-transform: uppercase;
-}
-
-.tag--highlight {
-  border-color: var(--c-highlight-border);
-  color: var(--c-highlight-text);
-  background-color: var(--c-highlight-bg);
-}
-.tag--highlight i {
-  font-size: 1.3em;
-  margin-left: -.3em;
-  margin-top: -.2em;
-  padding-right: .2em;
-  color: var(--c-highlight-text);
-}
-
-.tag--canceled {
-  border-color: var(--c-error-border);
-  background-color: var(--c-error-bg);
-  color: var(--c-error-text);
-}
-.tag--canceled i {
-  font-size: 1.2em;
-  color: var(--c-error-text);
-  margin-top: -.18em;
-  margin-left: -.1em;
-  padding-right: .2em;
-}
-
-.tag--new {
-  background-color: var(--c-new-bg);
-  border-color: var(--c-new-border);
-  color: var(--c-new-text);
-}
-.tag--new i {
-  font-size: 1em;
-  margin-top: -.18em;
-  margin-left: -.3em;
-  color: var(--c-new-text);
-}
-
-@media only screen and (min-width: 800px) {
-  .tag {
-    font-size: .9rem;
-  }
+/* material icons */
+.material-symbols-sharp {
+  vertical-align: middle;
 }
 
 
@@ -524,7 +416,7 @@ abbr {
 
   .heading-1 {
     font-size: 3.5rem;
-    padding-left: 1.5rem;
+    padding: 0 1.5rem;
     letter-spacing: .1rem;
   }
 
@@ -539,7 +431,7 @@ abbr {
     border-color: var(--c-corner-decor);
     border-style: solid none none solid;
     margin-left: -1.5rem;
-    margin-top: -.8rem;
+    margin-top: -.2rem;
     z-index: 2;
     transition: .1s;
   }
@@ -551,10 +443,10 @@ abbr {
     position: absolute;
     width: 2rem;
     height: 2rem;
-    border-right: .7rem solid var(--c-corner-decor);
+    border-left: .7rem solid var(--c-corner-decor);
     border-top: .7rem solid var(--c-corner-decor);
     margin-left: -1.5rem;
-    margin-top: -.8rem;
+    margin-top: -.2rem;
     z-index: 2;
     transition: .1s;
   }
@@ -575,6 +467,7 @@ abbr {
     transition: .1s;
   }
 
+  
   /* Decoration corner */
   .heading-1--bottom-left-corner:before {
     z-index: -1;
