--- a/src/components/datetile/DateTile.css
+++ b/src/components/datetile/DateTile.css
@@ -1,28 +1,15 @@
 .date-tile {
-	padding: .5rem .2rem;
+	padding: .5rem;
 	border-radius: .2rem;
-	height: fit-content;
-	display: flex;
-	width: fit-content;
-	min-width: 4rem;
-	justify-content: space-around;
-}
-
-.date-tile__date {
-	width: fit-content;
-}
-
-.date-tile__devider {
-	font-size: bold;
-	font-size: 2rem;
-	line-height: 2.5rem;
-	color: white;
 }
 
 .date-tile__day {
-	font-size: 2.3rem;
+	font-size: 2.5rem;
 	line-height: 2.5rem;
+	height: 2.5rem;
 	text-align: center;
+	display: block;
+	width: 4rem;
 	color: white;
 }
 
@@ -30,22 +17,23 @@
 	font-size: 1.5rem;
 	line-height: 1.5rem;
 	text-align: center;
+    width: 4rem;
+	display: block;
 	transform: translateY(-.2rem);
 	color: white;
 }
 
-
-@media only screen and (min-width: 400px) {
-	.date-tile {
-		padding: .5rem;
-		min-width: 5rem;
-	}
-
-	.date-tile__day {
-		font-size: 2.5rem;
-	}
-	
-	.date-tile__month {
-		font-size: 1.5rem;
-	}
+/* creates a "new" sticker in the top left corner */
+.date-tile--new:before {
+	content: 'Ny';
+	line-height: 1.5rem;
+	background: linear-gradient(132deg, rgb(255, 89, 0) 0%, rgb(254, 182, 0) 100%);
+	box-shadow: var(--c-bg-body) 0 0 0 .25rem;
+	display: block;
+	position: absolute;
+	margin-left: -1.3rem;
+	margin-top: -1rem;
+	border-radius: .2rem;
+	padding: 0 .3rem .1rem .3rem;
+	color: white;
 }
