--- a/src/components/filter/filter.css
+++ b/src/components/filter/filter.css
@@ -1,179 +1,24 @@
-/* only used flex in order to use gap */
-.filter-groups {
-    row-gap: 2rem;
-    display: flex;
-    flex-direction: column;
+.filter {
+    margin: 0 1rem 1rem 1rem;
+    position: sticky;
+    top: calc(var(--h-topbar)  + 1rem);
 }
 
-.filter-groups__reset {
-    min-width: 12rem;
-    width: 100%;
+.filter__content {
+    padding: 1rem;
 }
 
-.filter-groups__reset i {
-    font-size: 1.2rem;
+.filter__filter-icon {
+    font-size: 1.7rem;
+}
+
+.filter__reset-icon {
     line-height: inherit;
+    font-size: 1.2rem;
     vertical-align: top;
 }
 
-.filter__title {
-    font-size: 1rem;
-    letter-spacing: .1em;
-    font-weight: 600;
-    text-transform: uppercase;
-}
-
-.filter__items {
-    display: flex;
-    grid-template-columns: auto;
-    flex-wrap: wrap;
-}
-
-.filter__items--check {
-    flex-direction: column;
-    margin: .5rem 0 0 0;
-}
-
-.filter__items--tag {
-    flex-direction: row;
-    gap: .7rem;
-    row-gap: .7rem;
-    margin: .7rem 0 0 0;
-}
-
-.filter__item {
-    display: block;
-    width: fit-content;
-    display: block;
-    position: relative;
-    cursor: pointer;
-    line-height: 1.9rem;
-}
-
-.filter__item--check {
-    width: 100%;
-    padding-left: 2.1rem;
-    transition: color .2s ease-in;
-}
-
-.filter__input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-}
-
-.filter__input--check:hover ~ .filter__checkbox {
-    background-color: rgba(148, 148, 148, 0.2);/*fix color later*/
-}
-
-.filter__input--check:checked ~ .filter__checkbox {
-    background-color: var(--c-primary);
-    border-color: var(--c-primary);
-}
-
-.filter__input--tag:checked ~ .filter__item-name--tag {
-    background-color: var(--c-primary);
-    padding-left: 1.5rem;
-    padding-right: .5rem;
-}
-
-.filter__input--tag:checked ~ .filter__item-name--tag:before {
-    display: block;
-}
-
-.filter__checkbox {
-    transition: all .1s ease-in;
-    box-sizing: border-box;
-    position: absolute;
-    top: .25rem;
-    left: 0;
-    width: 1.4rem;
-    height: 1.4rem;
-    border: .15rem solid #6d6d6d;
-    border-radius: .1rem;
-}
-
-.filter__checkbox:after, .filter__item-name--tag:before {
-    content: '';
-    position: absolute;
-    display: none;
-    width: .37rem;
-    height: .7rem;
-    border: solid white;
-    border-width: 0 .15rem .15rem 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-    z-index: 5;
-    transition: .3s;
-}
-
-.filter__checkbox:after {
-    top: .06rem;
-    left: .3rem;
-}
-
-.filter__input--check:checked ~ .filter__checkbox:after {
-    display: block;
-}
-
-.filter__item-name--tag {
-    background-color: var(--c-corner-decor);
-    padding: .2em .9em;
-    border-radius: .2em;
-    line-height: 1.7em;
-    color: white;
-}
-
-.filter__item-name--tag:hover {
-    background-color: grey;
-}
-
-.filter__item-name--tag:before {
-    top: .55rem;
-    left: .5rem;
-}
-
-
-@media only screen and (min-width: 400px) {
-
-    .filter-groups__reset {
-        min-width: 12rem;
-        width: fit-content;
-        margin-right: 0;
-        margin-left: auto;
-    }    
-    
-    .filter__items--check {
-        flex-direction: row;
-        column-gap: 1.5rem;
-    }
-
-    .filter__item--check {
-        width: fit-content;
-    }
-
-}
-
-@media only screen and (min-width: 1000px) {
-
-    .filter-groups__reset {
-        margin-left: 0;
-        margin-right: auto;
-    }
-
-    .filter__items--check {
-        flex-direction: column;
-        gap: 0;
-    }
-
-}
-
-
-
-/*.filter__search-bar {
+.filter__search-bar {
     display: flex;
     background-color: none;
     margin-bottom: 1rem;
@@ -189,7 +34,7 @@
     font-size: 1.2rem;
     line-height: 2rem;
 
-    /* prevent rounded corners on mobile browsers *
+    /* prevent rounded corners on mobile browsers */
     -webkit-appearance: none;
     -webkit-border-radius: 0; 
     border-radius: 0;
@@ -215,4 +60,116 @@
 
 .filter__search-bar:focus-within .filter__search-icon {
     color: var(--c-link);
-}*/
+}
+
+.filter__checkboxes {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.filter__btn {
+    margin-top: 1rem;
+}
+
+.filter__btn i {
+    margin-left: .3rem;
+}
+
+.checkbox {
+    display: block;
+    width: fit-content;
+    padding: .3rem;
+}
+
+.checkbox__label {
+    padding-left: 1.8rem;
+    padding-right: .5rem;
+    cursor: pointer;
+    position: relative;
+    z-index: 2;
+    transition: color .2s ease-in;
+}
+
+.checkbox__label:before {
+    width: 1rem;
+    height: 1rem;
+    content: '';
+    border: .15rem solid #6d6d6d;
+    background-image: none;
+    background-repeat: no-repeat;
+    background-position: -.05rem 0;
+    border-radius: .2rem;
+    z-index: 2;
+    position: absolute;
+    margin-left: -2rem;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    transition: all .1s ease-in;
+}
+
+.checkbox__input {
+    width: 32px;
+    height: 32px;
+    order: 1;
+    z-index: 2;
+    position: absolute;
+    right: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    visibility: hidden;
+}
+
+.checkbox__input:checked ~ .checkbox__label:before {
+    background-color: var(--c-primary);
+    border-color: var(--c-primary);
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23fff' fill-rule='nonzero'/%3E%3C/svg%3E ");
+}
+
+@media only screen and (min-width: 400px) {
+
+    .filter__checkboxes {
+        flex-direction: row;
+    }
+
+    .checkbox {
+        padding-right: 1rem;
+    }
+
+    .filter__btn {
+        width: fit-content;
+        margin-top: 2rem;
+    }
+    
+}
+
+@media only screen and (min-width: 1000px) {
+
+    .accordion.filter {
+        background-color: rgb(0,0,0,0);
+        box-shadow: none;
+    }
+
+    .filter__checkboxes {
+        flex-direction: column;
+    }
+
+    .filter .accordion__nav-item {
+        display: none;
+    }
+
+    .filter .accordion__content {
+        max-height: inherit;
+    }
+
+    .checkbox {
+        padding-right: .5rem;
+    }
+
+    .filter__btn {
+        width: 100%;
+    }
+    
+}
