--- a/src/components/spinner/Spinner.css
+++ b/src/components/spinner/Spinner.css
@@ -22,8 +22,8 @@
   
 .Spinner .L {
     fill: none;
-    stroke: var(--c-font-main);
-    stroke-width: 5;
+    stroke: white;
+    stroke-width: 4;
     stroke-dasharray: 50;
     animation: L 1.5s infinite ease;
     -webkit-animation: L infinite 1.5s ease;
