--- a/src/components/themetoggle/ThemeToggle.css
+++ b/src/components/themetoggle/ThemeToggle.css
@@ -13,14 +13,6 @@
     padding: .8rem .8rem;
 }
 
-
-/* 
-    NOTE: the ".light" class below class is used for the theme 
-    toggle animation.
-    Dont use this class for color changes, use root varibles
-    for color managment. See app.css
-*/
-
 .light .theme-toggle__svg {
     fill: var(--c-moon);
 }
@@ -30,7 +22,7 @@
 }
 
 .theme-toggle__sun-ray {
-    transition: opacity .4s;
+    transition: .4s;
 }
 
 .light .theme-toggle__sun-ray {
@@ -56,5 +48,5 @@
 }
 
 .light .theme-toggle__sun-moon {
-    transform: scale(1.8);
+    transform: scale(1.9);
 }
