--- a/src/pages/eventlist/EventListItem.css
+++ b/src/pages/eventlist/EventListItem.css
@@ -1,49 +1,9 @@
 .events-item {
-	padding: .13rem;
+	display: inline-flex;
+	width: 100%;
 	cursor: pointer;
 	transition: .2s;
-	border-radius: .3rem;
-}
-
-.events-item:hover .events-item__wrapper {
-	background-color: var(--c-bg-box);
-}
-
-.events-item--highlight {
-	background: var(--c-bg-highlight-gradient);
-	transition: .2s;
-	margin-bottom: 1rem;
-}
-
-.events-item--highlight:hover {
-	background: var(--c-bg-highlight-gradient-hover);
-}
-
-.events-item__wrapper {
-	display: grid;
-	grid-template-columns: min-content auto min-content;
-	width: 100%;
-	padding: .5rem;
-	z-index: 50;
-	border-radius: .2rem;
-	background-color: var(--c-bg-body);
-
-}
-
-.events-item__tags {
-	display: flex;
-	gap: .5rem;
-	flex-wrap: wrap;
-}
-
-.events-item__tag {
-	margin-bottom: .2rem;
-}
-
-.events-item__middle {
-	min-width: 10rem;
-	margin: auto 0;
-	padding: 0 0 0 1rem;
+	padding: .5rem 1rem;
 
 	/* cleaner word-breaking */
 	word-break: break-word;
@@ -57,6 +17,17 @@
 	hyphens: auto;
 }
 
+.events-item:hover {
+	background-color: var(--c-bg-box);
+}
+
+.events-item__middle {
+	width: 100%;
+	min-width: 10rem;
+	margin: auto 0;
+	padding: 0 0 0 .5rem;
+}
+
 .events-item__name {
 	font-weight: 400;
 	margin: 0;
@@ -66,21 +37,18 @@
 
 .events-item__details {
 	list-style: none;
+	line-height: 1.4em;
 	margin-top: .2rem;
-	display: flex;
-	flex-wrap: wrap;
-	column-gap: .5rem;
-	row-gap: .1rem;
 }
 
 .events-item__detail {
 	display: inline-block;
-	color: var(--c-font-regular);
-	font-size: .9rem;
+	color: var(--c-font-discret);
+	margin-right: .4rem;
 }
 
 .events-item__icon {
-	color: var(--c-font-regular);
+	color: var(--c-font-discret);
 	padding-right: .3rem;
 	line-height: inherit;
 	font-size: 1.3em;
@@ -102,27 +70,24 @@
 
 @media only screen and (min-width: 600px) {
 	
-	.events-item__wrapper {
+	.events-item {
 		padding: 1rem;
 	}
 
 	.events-item__middle {
-		padding: 0 1rem;
-	}
-
-	.events-item__details {
-		margin-top: .2rem;
-		column-gap: 1rem;
-		row-gap: .2rem;
+		padding: 0 .5rem;
 	}
 
 	.events-item__picture {
 		display: block;
-		
 	}
 }
 
 @media only screen and (min-width: 800px) {
+
+	.events-item {
+		border-radius: .2rem;
+	}
 
 	.events-item__middle {
 		padding: 0 1rem;
@@ -132,16 +97,7 @@
 		font-size: 1.5rem;
 	}
 
-	.events-item__details {
-		margin-top: .2rem;
-		column-gap: 1.2rem;
-		row-gap: .5rem;
-	}
-}
-
-@media only screen and (min-width: 1000px) {
-
-	.events-item--highlight {
-		margin-bottom: 1rem;
+	.events-item__detail {
+		margin-right: 1rem;
 	}
 }
