--- a/src/pages/jobadlist/JobadsListItem.css
+++ b/src/pages/jobadlist/JobadsListItem.css
@@ -1,29 +1,16 @@
 .jobads-item {
+	width: 100%;
+	max-width: 22rem;
+	margin: auto;
 	cursor: pointer;
 	transition: .2s;
-	padding: .13rem;
-	border-radius: .4rem;
-	margin-bottom: 1rem;
-}
-
-.jobads-item:hover {
-	background-color: var(--c-bg-box);
-}
-
-.jobads-item__wrapper {
-	display: inline-flex;
-	width: 100%;
 	padding: 1rem;
-	z-index: 50;
-	border-radius: .3rem;
 	display: grid;
 	grid-template-columns: auto;
-	row-gap: .3rem;
-	align-items: center;
-	grid-template-areas:
+	row-gap: .5rem;
+	grid-template-areas: 
 		'pic' 
 		'info';
-
 
 	/* cleaner word-breaking */
 	word-break: break-word;
@@ -35,28 +22,10 @@
 	-moz-hyphens: auto;
 	-webkit-hyphens: auto;
 	hyphens: auto;
-	background-color: var(--c-bg-body);
 }
 
-.jobads-item__wrapper--with-tags {
-	align-items: start;
-	grid-template-areas:
-		'tags'
-		'pic' 
-		'info';
-}
-
-.jobads-item:hover .jobads-item__wrapper {
+.jobads-item:hover {
 	background-color: var(--c-bg-box);
-}
-
-.jobads-item--highlight {
-	background: var(--c-bg-highlight-gradient);
-	transition: .2s;
-}
-
-.jobads-item--highlight:hover {
-	background: var(--c-bg-highlight-gradient-hover);
 }
 
 .jobads-item__picture {
@@ -66,20 +35,33 @@
 .jobads-item__img {
 	display: block;
     width: 100%;
-	object-fit: contain;
 	aspect-ratio: 3/2;
+    object-fit: cover;
 	border-radius: .2rem;
 }
 
-.jobads-item__tags {
-	display: flex;
-	gap: .5rem;
-	grid-area: tags;
-	height: min-content;
+/* "new" sticker in the top left corner */
+.jobads-item__new-sticker {
+	background: var(--c-primary); /*linear-gradient(132deg, rgb(255, 89, 0) 0%, rgb(254, 182, 0) 100%);*/
+	box-shadow: var(--c-bg-body) 0 0 0 .4rem;
+	color: white;
+	display: block;
+	position: absolute;
+	margin-left: -.5rem;
+	margin-top: -.5rem;
+	border-radius: 1.5rem;
+	padding: .2em .8em;
+	font-size: 1.2rem;
+	font-weight: 800;
+}
+
+.jobads-item:hover .jobads-item__new-sticker{ 
+	box-shadow: var(--c-bg-box) 0 0 0 .4rem; 
 }
 
 .jobads-item__info {
 	grid-area: info;
+	align-self: center;
 }
 
 .jobads-item__name {
@@ -90,21 +72,19 @@
 
 .jobads-item__details {
 	list-style: none;
-	display: flex;
-	flex-wrap: wrap;
-	column-gap: 1rem;
-	row-gap: .2rem;
+	width: 100%;
 	margin-top: .5rem;
 }
 
 .jobads-item__detail {
-	color: var(--c-font-regular);
+	color: var(--c-font-discret);
+	display: inline-block;
+	margin-right: .4rem;
 	line-height: 1.4em;
-	font-size: .9rem;
 }
 
 .jobads-item__icon {
-	color: var(--c-font-regular);
+	color: var(--c-font-discret);
 	padding-right: .3rem;
 	line-height: inherit;
 	font-size: 1.3em;
@@ -121,83 +101,44 @@
 
 @media only screen and (min-width: 400px) {
 
-	.jobads-item--highlight {
-		margin-bottom: 1rem;
-	}
-
-	.jobads-item__wrapper {
+	.jobads-item {
 		column-gap: 1rem;
-		padding: .75rem;
-		max-width: 100%;
-		grid-template-columns: min-content auto;
-		grid-template-areas: 
-			'pic info';
+		max-width: max-content;
+		margin: 0;
 	}
 
-	.jobads-item__wrapper--with-tags {
-		grid-template-rows: 1.6rem auto;
-		grid-template-areas: 
-			'tags tags'
-			'pic info';
+	.jobads-item {
+		grid-template-columns: min-content auto;
+		grid-template-areas: 'pic info';
 	}
 
 	.jobads-item__img {
-		height: 4.5rem;
+		height: 6rem;
 		width: fit-content;
 	}
 
+	.jobads-item__new-sticker {
+		font-size: 1rem;
+	}
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 800px) {
 
-	.jobads-item__wrapper {
-		padding: 1rem;
+	.jobads-item {
+		border-radius: .2rem;
+		padding: 1.5rem 1rem;
 	}
 
 	.jobads-item__img {
 		height: 7rem;
 	}
 
-	.jobads-item__details {
-		column-gap: 1.2rem;
-		row-gap: .2rem;
-	}
-}
-
-@media only screen and (min-width: 800px) {
-
-	.jobads-item__wrapper {
-		padding: 1rem;
-		column-gap: 2rem;
-		row-gap: .5rem;
-		grid-template-areas: 
-			'pic info';
-	}
-
-	.jobads-item__wrapper--with-tags {
-		grid-template-areas: 
-			'pic tags'
-			'pic info';
-	}
-
-	.jobads-item__img {
-		height: 8rem;
-	}
-
 	.jobads-item__name {
 		font-size: 1.5rem;
 	}
 
-	.jobads-item__details {
-		column-gap: 1.5rem;
-		row-gap: .5rem;
+	.jobads-item__detail {
+		margin-right: 1rem;
 	}
 }
 
-@media only screen and (min-width: 1000px) {
-
-	.jobads-item--highlight {
-		margin-bottom: 2rem;
-	}
-
-}
