--- a/src/components/jobad/JobadCard.css
+++ b/src/components/jobad/JobadCard.css
@@ -7,7 +7,6 @@
 	border-radius: .3rem;
     display: flex;
     flex-direction: column;
-	border: .15rem solid var(--c-corner-decor);
 }
 
 .jobad-card:hover {
@@ -17,9 +16,10 @@
 .jobad-card__img {
 	display: block;
     width: 100%;
-	object-fit: contain;
+	object-fit: cover;
 	aspect-ratio: 3/2;
 	border-radius: .3rem;
+	border: .15rem solid var(--c-corner-decor);
 }
 
 .jobad-card__name {
