--- a/src/components/jobad/JobadsListItem.css
+++ b/src/components/jobad/JobadsListItem.css
@@ -3,9 +3,7 @@
 	transition: .2s;
 	padding: .13rem;
 	border-radius: .4rem;
-	margin-bottom: 1rem;
-	background-color: var(--c-corner-decor);
-	max-width: 18.3rem;
+	margin-bottom: 1.5rem;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -66,9 +64,10 @@
 .jobads-item__img {
 	display: block;
     width: 100%;
-	object-fit: contain;
+	object-fit: cover;
 	aspect-ratio: 3/2;
-	border-radius: .2rem;
+	border-radius: .3rem;
+	border: .15rem solid var(--c-corner-decor);
 }
 
 .jobads-item__tags {
