--- a/src/components/markdownrender/MarkdownRender.css
+++ b/src/components/markdownrender/MarkdownRender.css
@@ -94,6 +94,7 @@
     width: fit-content;
     border-radius: .3rem;
     margin: 1rem auto;
+    border: .15rem solid var(--c-corner-decor);
 }
 
 
