--- a/src/pages/jobad/JobadPage.css
+++ b/src/pages/jobad/JobadPage.css
@@ -58,7 +58,9 @@
 .jobad-details__company-name {
     font-size: 1.5rem;
     margin: auto 0;
+    line-height: 1.4em;
 
+    /* cleaner word-breaking */
     word-break: break-word;
 	white-space: pre-line;
 	overflow-wrap: break-word;
@@ -102,6 +104,7 @@
 }
 
 .jobad-details__info {
+    /* cleaner word-breaking */
     word-break: break-word;
 	white-space: pre-line;
 	overflow-wrap: break-word;
